<resources>
    <string name="app_name">Earful</string>
    <string name="earful">Earful!</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign In</string>
    <string name="exercise_progress">Exercise Progress</string>
    <string name="play_cd">Play</string>
    <string name="play_icon">ᐅ</string>
    <string name="submit">SUBMIT</string>
    <string name="interval_training_question">What interval did you hear?</string>
    <string name="musician_mode_header">Musician Mode:</string>
    <string name="choose_level">Choose Level</string>
    <string name="mixing_mode_header">Mixing Mode:</string>
    <string name="include">Include:</string>
    <string name="cuts">Cuts</string>
    <string name="boosts">Boosts</string>
    <string name="start_exercise">Start Exercise</string>
    <string name="_4khz">4kHz</string>
    <string name="_2khz">2kHz</string>
    <string name="_1khz">1kHz</string>
    <string name="_500hz">500Hz</string>
    <string name="_250hz">250Hz</string>
    <string name="level_selection">Level Selection</string>
    <string name="level_1">Level 1</string>
    <string name="level_2">Level 2</string>
    <string name="level_3">Level 3</string>
    <string name="level_4">Level 4</string>
    <string name="level_5">Level 5</string>
    <string name="question_mark">\?</string>
    <string name="create_new_account"><u>Create new account</u></string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="reenter_password">Re-enter Password</string>
    <string name="create_account">Create Account</string>
    <string name="back_to_sign_in">Back to sign-in</string>
    <string name="passwords_match">Passwords match</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="log_into_existing_account"><u>Log into existing account</u></string>
    <string name="setting_name">Setting Name</string>
    <string name="settings">Settings</string>
    <string name="boosted_or_cut_question">Which frequency was Boosted or Cut?</string>
    <string name="boosted_question">Which frequency was Boosted?</string>
    <string name="cut_question">Which frequency was Cut?</string>
    <string name="db_key_musician_score">musician_score</string>
    <string name="db_key_mixing_score">mixing_score</string>
    <string name="db_key_users">users</string>
    <string name="new_level_unlocked">New level unlocked!</string>
    <string name="musician_results_key">musician</string>
    <string name="mixing_results_key">mixing</string>
    <string name="low">Low</string>
    <string name="mid">Mid</string>
    <string name="high">High</string>
</resources>