<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <TextView
        android:id="@+id/musicianMode_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/give_you_glory"
        android:text="@string/musician_mode_header"
        android:textColor="@color/dark_blue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/musicianMode_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bright_coral"
        android:onClick="launchMusicianMode"
        android:text="@string/choose_level"
        app:layout_constraintBottom_toTopOf="@+id/divider_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/musicianMode_textView" />

    <View
        android:id="@+id/divider_view"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/mixingMode_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/give_you_glory"
        android:text="@string/mixing_mode_header"
        android:textColor="@color/dark_blue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_view" />

    <TextView
        android:id="@+id/questions_include_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/questions_include"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@id/cuts_checkbox"
        app:layout_constraintEnd_toStartOf="@id/start_mixing_exercise_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mixingMode_textView" />

    <CheckBox
        android:id="@+id/cuts_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="false"
        android:text="@string/cuts"
        app:layout_constraintBottom_toTopOf="@id/boosts_checkbox"
        app:layout_constraintStart_toStartOf="@id/questions_include_textView"
        app:layout_constraintTop_toBottomOf="@id/questions_include_textView" />

    <CheckBox
        android:id="@+id/boosts_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/boosts"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/questions_include_textView"
        app:layout_constraintTop_toBottomOf="@id/cuts_checkbox" />

    <Button
        android:id="@+id/start_mixing_exercise_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bright_coral"
        android:onClick="onClick"
        android:text="@string/start_exercise"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/questions_include_textView"
        app:layout_constraintTop_toBottomOf="@id/questions_include_textView" />
</androidx.constraintlayout.widget.ConstraintLayout>