<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/username"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/light_blue"
        android:backgroundTint="@color/light_blue"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccountHeader" />

    <TextView
        android:id="@+id/createAccountHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/give_you_glory"
        android:text="Create New Account"
        android:textColor="@color/dark_blue"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/isUsernameAvailableTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Username is available"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/username" />

    <EditText
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/light_blue"
        android:backgroundTint="@color/light_blue"
        android:ems="10"
        android:hint="@string/email"
        android:importantForAutofill="no"
        android:inputType="text"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/isUsernameAvailableTV" />

    <TextView
        android:id="@+id/isEmailAvailableTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Email is available"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@color/light_blue"
        android:backgroundTint="@color/light_blue"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/isEmailAvailableTV" />

    <EditText
        android:id="@+id/reenterPassword"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@color/light_blue"
        android:backgroundTint="@color/light_blue"
        android:ems="10"
        android:hint="@string/reenter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <TextView
        android:id="@+id/doPasswordsMatch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Passwords match"
        android:textStyle="italic"
        app:layout_constraintStart_toStartOf="@+id/username"
        app:layout_constraintTop_toBottomOf="@+id/reenterPassword" />

    <Button
        android:id="@+id/createAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/bright_coral"
        android:enabled="true"
        android:text="@string/create_account"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/doPasswordsMatch" />

</androidx.constraintlayout.widget.ConstraintLayout>